<resources>
    <string name="app_name">Awonder</string>

    <!-- Fragment Titles -->
    <string name="results_fragment_title">Poll Results</string>
    <string name="answer_poll_fragment_title">Answer Poll</string>
    <string name="history_fragment_title">History</string>
    <string name="poll_fragment_title">Poll</string>
    <string name="preference_fragment_title">Settings</string>

    <!-- Navigation Menu -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_home">Home</string>
    <string name="nav_history">History</string>

    <!-- Preference Categories -->
    <string name="pref_cat_details">Details</string>
    <string name="pref_cat_dev">Development Settings</string>
    <string name="pref_cat_delete">Shared Preferences</string>

    <!-- Preference Keys -->
    <string name="pref_history_key">HISTORY</string>
    <string name="pref_uid_key">UID</string>
    <string name="pref_state_key">STATE</string>
    <string name="pref_host_key">HOST</string>

    <string name="pref_rem_uid_key">REM_UID</string>
    <string name="pref_rem_history_key">REM_HISTORY</string>
    <string name="pref_self_respond_key">SELF_RESPOND</string>

    <string name="pref_det_default_host_key">DET_DEFAULT_HOST</string>
    <string name="pref_det_uid_key">DET_UID</string>
    <string name="pref_det_screen_key">DET_SCREEN</string>

    <!-- Preference Titles -->
    <string name="pref_det_default_host_title">Default Host</string>
    <string name="pref_det_uid_title">UID</string>
    <string name="pref_det_screen_title">Screen Size</string>

    <string name="pref_state_title">State</string>
    <string name="pref_host_title">Host</string>

    <string name="pref_rem_uid_title">Remove stored identifier</string>
    <string name="pref_rem_history_title">Remove stored history</string>
    <string name="pref_self_respond_title">Self Respond</string>

    <!-- Network Error -->
    <string name="net_error_dialog_title">Network Error</string>
    <string name="net_error_dialog_message">Attempting to reach server</string>
    <string name="net_error_1_message">Cannot reach server</string>
    <string name="net_error_2_message">No internet connection</string>
    <string name="net_error_3_message">Invalid URL</string>
    <string name="net_error_edit">EDIT</string>
    <string name="net_error_retry">RETRY</string>

    <!-- Buttons -->
    <string name="ok_button">Okay</string>
    <string name="answer_button">Answer Poll</string>
    <string name="start_button">Start Poll</string>
    <string name="send_button">Send</string>
    <string name="stop_button">Stop Poll</string>
    <string name="return_button">Return</string>

    <!-- Misc Resources -->
    <string name="prompt_answer_poll">Answer poll:</string>
    <string name="prompt_start_poll">Start poll:</string>
    <string name="responses">Responses: </string>

    <string name="radio_mode_1">Scale</string>
    <string name="radio_mode_2">Yes/No</string>

    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>
