<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/pref_cat_details">

        <Preference
            app:key="@string/pref_det_default_host_key"
            app:title="@string/pref_det_default_host_title"
            android:title="s"/>

        <Preference
            app:key="@string/pref_det_uid_key"
            app:title="@string/pref_det_uid_title"/>

        <Preference
            app:key="@string/pref_det_screen_key"
            app:title="@string/pref_det_screen_title"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_cat_dev">

        <EditTextPreference
            app:key="@string/pref_host_key"
            app:title="@string/pref_host_title" />

        <!--suppress AndroidElementNotAllowed -->
        <tevonial.awonder.library.SeekBarPreference
            app:key="@string/pref_state_key"
            app:title="@string/pref_state_title"
            android:summary=""
            android:defaultValue="0"
            android:max="6" />

        <Preference
            app:key="@string/pref_self_respond_key"
            app:title="@string/pref_self_respond_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_cat_delete">

        <Preference
            app:key="@string/pref_rem_history_key"
            app:title="@string/pref_rem_history_title" />

        <Preference
            app:key="@string/pref_rem_uid_key"
            app:title="@string/pref_rem_uid_title" />

    </PreferenceCategory>

</PreferenceScreen>